RS2 | Bug 36 | Whatsapp/SMS Issue

--- a/force-app/main/default/classes/ASF_CommPETriggerHelper.cls
+++ b/force-app/main/default/classes/ASF_CommPETriggerHelper.cls
@@ -148,6 +148,9 @@ public without sharing class ASF_CommPETriggerHelper {
             if(log.Id != null){
                 // Do some data setup here and then update.
                 log.Status__c = 'In Progress';
+                if(log.Whatsappp_Msg_Body__c!=''){
+                log.WhatsApp_Delivery_Status__c = 'In Progress';
+                }
                 updLogs.add(log);
             }
         }
@@ -469,13 +472,13 @@ public without sharing class ASF_CommPETriggerHelper {
                     }
                 }
         }
-        String query = 'SELECT ID,Business_Unit__c,Lead__c,AccountId,CCC_External_Id__c ,ContactEmail,contact.Name,ContactMobile,ContactId,SuppliedEmail,origin';
+        String query = 'SELECT ID,Business_Unit__c,Lead__c,AccountId,CCC_External_Id__c ,ContactEmail,contact.Name,ContactMobile,ContactId,SuppliedEmail,origin,lob__c';
         query += ' FROM CASE WHERE ID IN :caseIds FOR UPDATE';
         if(setCaseFields !=null && setCaseFields.size()>0){
             List<string> temp = new List<String>();
             temp.addAll(setCaseFields);
             Set<Id> tempCaseIds = caseIds;
-            query = 'SELECT ID,Business_Unit__c,AccountId,Lead__c,CCC_External_Id__c ,ContactEmail,contact.Name,ContactMobile,ContactId,SuppliedEmail,origin,'+String.escapeSingleQuotes(String.join(temp, ','));
+            query = 'SELECT ID,Business_Unit__c,AccountId,Lead__c,CCC_External_Id__c ,ContactEmail,contact.Name,ContactMobile,ContactId,SuppliedEmail,origin,lob__c,'+String.escapeSingleQuotes(String.join(temp, ','));
             query = query.removeEnd(',');
             query += ' FROM CASE WHERE ID IN :tempCaseIds FOR UPDATE';
         }
@@ -522,6 +525,7 @@ public without sharing class ASF_CommPETriggerHelper {
                         log = createCommunincationLogRecord(log,null,null,cRec.Id,'Customer',pLog.Specific_To_MobilePhone__c,null);
                         log.put('PE_Logger_Id__c',pLog.Id);
                         log.LOB__c = pLog.LOB__c;
+                        log.Line_of_Business__c = cRec.LOB__c;
                         log.put('Status__c','In Progress');
                         log.put('Send_To_Specific_Mobile__c',pLog.Send_To_Specific_Mobile__c);
                         logs.add(log);
@@ -532,7 +536,7 @@ public without sharing class ASF_CommPETriggerHelper {
                     log.put('Contact_Email__c', selectedCon.email);
                     log.put('PE_Logger_Id__c',pLog.Id);
                     log.LOB__c = pLog.LOB__c;
-                    
+                    log.Line_of_Business__c = cRec.LOB__c;
                     if( selectedCon.MobilePhone != ''){
                         log.put('Status__c','In Progress');
                     }
@@ -554,6 +558,7 @@ public without sharing class ASF_CommPETriggerHelper {
                             log.put('Contact_Email__c', con.email);
                             log.put('PE_Logger_Id__c',pLog.Id);
                             log.LOB__c = pLog.LOB__c;
+                            log.Line_of_Business__c = cRec.LOB__c;
                             logs.add(log);
                         }
                     }
