EmailId,Contact update Source Requested Validation

--- a/force-app/main/default/classes/ABSLI_BeforeUpdateAfterASFTriggerLogic.cls
+++ b/force-app/main/default/classes/ABSLI_BeforeUpdateAfterASFTriggerLogic.cls
@@ -2,7 +2,7 @@
  * @description       : BSLI BeforeUpdateTrigger Logic After ASF Code
  * @author            : ChangeMeIn@UserSettingsUnder.SFDoc
  * @group             : 
- * @last modified on  : 08-28-2024
+ * @last modified on  : 08-29-2024
  * @last modified by  : ChangeMeIn@UserSettingsUnder.SFDoc
 **/
 public with sharing class ABSLI_BeforeUpdateAfterASFTriggerLogic {
@@ -158,7 +158,7 @@ public with sharing class ABSLI_BeforeUpdateAfterASFTriggerLogic {
 				 if (caseDetail != null  && emailContactSubTypes.contains(caseRec.CCC_External_Id__c)) {
                        if (caseDetail.Source_Request_submitted_by__c != 'Customer' && caseRec.Stage__c != 'Unresolved') {
                             Case caseError = newMap.get(caseRec.Id);
-                           	caseError.addError('Source (Request Submitted by) should be Customer in order to proceed further. Kindley Unresolve the case.');
+                           	caseError.addError('Source (Request Submitted by) should be Customer in order to proceed further. Kindly Unresolve the case.');
                             newMap.put(caseRec.Id,caseError);
                        }   
                  }
