--- a/force-app/main/default/classes/ABSLI_SurrenderPolicyIntegration.cls
+++ b/force-app/main/default/classes/ABSLI_SurrenderPolicyIntegration.cls
@@ -85,7 +85,7 @@ public with sharing class ABSLI_SurrenderPolicyIntegration implements ASF_Integr
             SurrenderPolicyRequestBody requestJSON = new SurrenderPolicyRequestBody();
             requestJSON.TransNo = caseRecord.caseNumber;
             requestJSON.PolicyID = caseRecord.Asset.Policy_No__c;
-            requestJSON.EffectiveDt = String.valueOf(SYSTEM.TODAY());
+            requestJSON.EffectiveDt = String.valueOf(ABCL_IntegrationCommonUtility.dateFormat(System.today(), 'dd-MM-YYYY'));
             requestJSON.IFSC_Code = caseRecord.ABSLI_Case_Detail__r.IFSC_Code__c;
             requestJSON.MICR_Code = ABSLI_Constants.BANKACCOUNTUPDATE_MICR_CODE;
             requestJSON.BankAccountNo = caseRecord.ABSLI_Case_Detail__r.Account_Number__c;
