Changes related ebot recategorization.

--- a/force-app/main/default/classes/ABHFL_CaseIntegrationHelper.cls
+++ b/force-app/main/default/classes/ABHFL_CaseIntegrationHelper.cls
@@ -48,51 +48,62 @@ public with sharing class ABHFL_CaseIntegrationHelper {
         if(String.isNotBlank(ebotResponse.CASESUBTYPE)){
             if(ebotResponse.ISREGISTRED == 'No'){
                     caseDetails.Is_FTR__c = true;
-                }
-                if(Schema.sObjectType.ABHFL_Case_Detail__c.isCreateable()){
-                    insert caseDetails;
-                }
-                List<ASF_Case_Category_Config__c> cccList = [SELECT Id
-                                                        FROM ASF_Case_Category_Config__c 
-                                                        WHERE CCC_External_Id__c = :ebotResponse.CASESUBTYPE AND Business_Unit__c = 'ABHFL'];
-                Case caseRecord = new Case();
-                caseRecord.Id = caseId;
-                caseRecord.ABHFL_Case_Detail__c = caseDetails.Id;
-                caseRecord.CCC_External_Id__c = ebotResponse.CASESUBTYPE;
-                caseRecord.Comments = ebotResponse.COMMENT;
-                if(!cccList.isEmpty()){
-                    //Valid External Id provided, hence convert.
-                    caseRecord.RecordTypeId = ASF_Constants.RT_FRAMEWORK;
-                    caseRecord.Skip_Dedupe__c = true;
-                }
+            }
+            if(Schema.sObjectType.ABHFL_Case_Detail__c.isCreateable()){
+                insert caseDetails;
+            }
+            List<ASF_Case_Category_Config__c> cccList = [SELECT Id
+                                                    FROM ASF_Case_Category_Config__c 
+                                                    WHERE CCC_External_Id__c = :ebotResponse.CASESUBTYPE AND Business_Unit__c = 'ABHFL'];
+            List<Case> caseRecords = [Select id,AccountId,AssetId from Case where id =: caseId];
+            Case caseRecord = new Case();
+            if(caseRecords.size() > 0){
+                caseRecord = caseRecords[0];
+            }
+            //caseRecord.Id = caseId;
+            caseRecord.ABHFL_Case_Detail__c = caseDetails.Id;
+            caseRecord.CCC_External_Id__c = ebotResponse.CASESUBTYPE;
+            caseRecord.Comments = ebotResponse.COMMENT;
+            if(!cccList.isEmpty()){
+                //Valid External Id provided, hence convert.
+                caseRecord.RecordTypeId = ASF_Constants.RT_FRAMEWORK;
+                caseRecord.Skip_Dedupe__c = true;
+            }
 
-                if( ebotResponse.ISREPEAT == 'Yes'){
-                    caseRecord.Technical_Source__c = 'LWC';
-                }
+            if( ebotResponse.ISREPEAT == 'Yes'){
+                caseRecord.Technical_Source__c = 'LWC';
+            }
                 
             //Added By Vishal
-                Map<String,Id> lanWithAssetIdMap = new Map<String,Id>();
-                if(ebotResponse.EBOTLAN != null && ebotResponse.EBOTLAN.size() > 0){
-                    for(Asset ast : [SELECT Id,LAN__c FROM Asset WHERE LAN__c IN: ebotResponse.EBOTLAN WITH SECURITY_ENFORCED]){
-                        if(caseRecord.AssetId != null){
-                            lanWithAssetIdMap.put(ast.LAN__c,ast.Id);
-                        }else{
-                            caseRecord.AssetId = ast.Id;
-                            ebotResponse.EBOTLAN.remove(ebotResponse.EBOTLAN.indexOf(ast.LAN__c));
-                        }
-                    }            
-                }
+            Map<String,Id> lanWithAssetIdMap = new Map<String,Id>();
+            if(ebotResponse.EBOTLAN != null && ebotResponse.EBOTLAN.size() > 0){
+                for(Asset ast : [SELECT Id,LAN__c,AccountId FROM Asset WHERE LAN__c IN: ebotResponse.EBOTLAN WITH SECURITY_ENFORCED]){
+                    if(caseRecord.AssetId != null){
+                        lanWithAssetIdMap.put(ast.LAN__c,ast.Id);
+                    }else{
+                        caseRecord.AssetId = ast.Id;
+                        ebotResponse.EBOTLAN.remove(ebotResponse.EBOTLAN.indexOf(ast.LAN__c));
+                    }
+                    system.debug('caseRecord.AccountId'+caseRecord.AccountId);
+                    if(caseRecord.AccountId == null){
+                        caseRecord.AccountId = ast.AccountId;
+                    }
+                }            
+            }
             //End
+
             if(ebotResponse.ISREGISTRED == 'No'){
-                    caseRecord.Attachment_Status__c ='NA';
-                    caseRecord.Technical_Source__c = 'API';
-                }
-                if(Schema.sObjectType.Case.isUpdateable()){
-                    update caseRecord;
-                }
-                        Case caseRec = [SELECT Id,RecordTypeId,Is_Duplicate__c,CCC_External_Id__c,Stage__c,MoveToNext__c FROM Case WHERE Id =: caseRecord.Id];
-                //Do rest of the things only if Case was converted to Framework
-                if(caseRec.RecordTypeId == ASF_Constants.RT_FRAMEWORK){
+                caseRecord.Attachment_Status__c ='NA';
+                caseRecord.Technical_Source__c = 'API';
+            }
+            if(Schema.sObjectType.Case.isUpdateable()){
+                update caseRecord;
+            }
+
+            Case caseRec = [SELECT Id,RecordTypeId,Is_Duplicate__c,CCC_External_Id__c,Stage__c,MoveToNext__c FROM Case WHERE Id =: caseRecord.Id];
+            //Do rest of the things only if Case was converted to Framework
+            if(caseRec.RecordTypeId == ASF_Constants.RT_FRAMEWORK){
+
                 //Added by Dhinesh for Preclosure - when categorized land on next stage.
                 if(validSubTypesForMovetoNext.contains(caseRecord.CCC_External_Id__c) && !caseRec.Is_Duplicate__c && caseRec.Stage__c !='Duplicate'){
                     List<ASF_Checklist__c> paymentChecklists = [SELECT Id, Status__c FROM ASF_Checklist__c WHERE Case__c = :caseRec.Id AND Label__c = 'Create Payment' LIMIT 1];
@@ -102,6 +113,7 @@ public with sharing class ABHFL_CaseIntegrationHelper {
                         paymentChecklist.Status__c = 'Completed';
                         update paymentChecklist;
                     }
+                    caseRec.typeSubTypeMismatch__c=false;
                     caseRec.MoveToNext__c = TRUE;
                     update caseRec;
                 } 
@@ -120,7 +132,8 @@ public with sharing class ABHFL_CaseIntegrationHelper {
                     createMultipleCaseWithLAN(caseRecord.Id,caseDetails.Id,lanWithAssetIdMap,ebotResponse);
                 }
             }
-            }
+        }
+
         }
 
     /****************************************************************************************************************
