--- a/force-app/main/default/classes/ASF_CaseSLAHandlerV1.cls
+++ b/force-app/main/default/classes/ASF_CaseSLAHandlerV1.cls
@@ -382,13 +382,34 @@ public without sharing class ASF_CaseSLAHandlerV1 {
         return caseBackMovementCheckMap;
     }
     
-    
+    public static Decimal calculateBusinessHoursPerDay(Id businesshourId){
+        Decimal businessHoursPerDay = 9;
+        
+        for(BusinessHours BhRec : [SELECT Id, MondayStartTime, MondayEndTime FROM BusinessHours WHERE Id =: businesshourId]){
+            Decimal startMinutes = BhRec.MondayStartTime.hour() * 60 + BhRec.MondayStartTime.minute();
+            Decimal endMinutes = BhRec.MondayEndTime.hour() * 60 + BhRec.MondayEndTime.minute();
+            Decimal hoursPerDay = (endMinutes - startMinutes) / 60; 
+            
+            if(hoursPerDay == 0){
+                businessHoursPerDay = 24;     
+            }else{
+                businessHoursPerDay = hoursPerDay;
+            }
+        }
+        return businessHoursPerDay;
+    }
     
     public static Boolean updateOldCaseSLAHistory(List<Case> newCases){
         Set<Id> caseIdSet = new Set<Id>();
+        Id businesshourId;
+        Decimal businessHoursPerDay = 9;
+        
         for(Case c:newCases){
             caseIdSet.add(c.Id);
+            businesshourId = c.BusinessHoursId;
         }
+        businessHoursPerDay = calculateBusinessHoursPerDay(businesshourId);
+        
         List<ASF_Case_SLA_History__c> slaHistoryList = new List<ASF_Case_SLA_History__c>();
         //take running record and make it false
         if(!caseIdSet.isEmpty()){
@@ -430,7 +451,7 @@ public without sharing class ASF_CaseSLAHandlerV1 {
                                                                 long seconds = milliseconds / 1000;
                                                                 long minutes = seconds / 60;
                                                                 long hours = minutes / 60;
-                                                                long days = hours / 24;
+                                                                Integer days = Integer.valueOf (hours / businessHoursPerDay);
                                                                 if(days < 1){
                                                                     slaHistory.Time_Taken__c = ( Math.mod(hours, 24) + 'hr ' +  Math.mod(minutes, 60)  + 'min ' + Math.mod(seconds, 60)  )+'s';   
                                                                 }else{
