--- a/force-app/main/default/classes/ABSLAMC_Constants.cls
+++ b/force-app/main/default/classes/ABSLAMC_Constants.cls
@@ -10,8 +10,8 @@ public with Sharing class ABSLAMC_Constants {
     public static final String OPEN_STAGE = 'Open';
     public static final String RESOLVED_STAGE = 'Resolved';
     public static final String REPLY_RECEIVED_FROM_APP_SUPPORT = 'Reply Received from App Support';
-    public static final String ISSUE_MANAGEMENT_UNIT = 'Issue Management Unit';   
+    public static final String ISSUE_MANAGEMENT_UNIT = 'ABSLAMC MF Issue Management Unit';   
     public static final String AWAITING_RESPONSE_FROM_APP_SUPPORT = 'Awaiting Response from App Support'; 
     public static final String ABSLAMCBU = 'ABSLAMC'; 
-    
+   
 }
