--- a/force-app/main/default/classes/ABSLAMC_CaseAssignmentHelper.cls
+++ b/force-app/main/default/classes/ABSLAMC_CaseAssignmentHelper.cls
@@ -20,6 +20,7 @@ public with sharing class ABSLAMC_CaseAssignmentHelper {
         List<String> caseSources = new List<String>(Label.ABSLAMC_CaseSourcesforAssignment.split(','));
         Map<String, Id> queueMap = new Map<String, Id>(); 
         List<ASF_Case_SLA_History__c> caseSLAHistories = new List<ASF_Case_SLA_History__c>();
+        Map<Id, Set<String>> caseIdToSkipperFlag = new Map<Id, Set<String>>();
         
         for(Case caseRec : newMapCase.values()){
             if(caseRec.Business_Unit__c == ABSLAMC_Constants.ABSLAMCBU){
@@ -53,23 +54,27 @@ public with sharing class ABSLAMC_CaseAssignmentHelper {
             for (Case caseRec : amcSpecificCases.values()) {
                 if (caseRec.Business_Unit__c == ABSLAMC_Constants.ABSLAMCBU 
                     && caseRec.Stage__c != oldMapCase.get(caseRec.Id).Stage__c
-                    && caseRec.Stage__c == ABSLAMC_Constants.OPEN_STAGE             
-                   ) {
-                       if (queueMap.containsKey(ABSLAMC_Constants.ISSUE_MANAGEMENT_UNIT) 
-                           && caseSources.contains(caseRec.Source__c)) {
-                               caseRec.OwnerId = queueMap.get(ABSLAMC_Constants.ISSUE_MANAGEMENT_UNIT);
-                               caseRec.Feature_Skipper_Flag__c = ASF_Constants.SKIP_ASSIGNMENT;
-                               
-                           } else if (caseSlaHistoryMap.containsKey(caseRec.Id)) {
-                               // Assign to last owner of open stage
-                               for (ASF_Case_SLA_History__c history : caseSlaHistoryMap.get(caseRec.Id)) {
-                                   if (history.Stage__c == ABSLAMC_Constants.OPEN_STAGE) {
-                                       caseRec.OwnerId = history.Current_Owner_Id__c;
-                                       break;
-                                   }
-                               }
-                           }
-                   }
+                    && caseRec.Stage__c == ABSLAMC_Constants.OPEN_STAGE)
+                {
+                    if (queueMap.containsKey(ABSLAMC_Constants.ISSUE_MANAGEMENT_UNIT) 
+                        && caseSources.contains(caseRec.Source__c)) {
+                            caseRec.OwnerId = queueMap.get(ABSLAMC_Constants.ISSUE_MANAGEMENT_UNIT);
+                            caseIdToSkipperFlag.put(caseRec.Id, new Set<String>{ASF_Constants.SKIP_ASSIGNMENT});
+                    }
+                    else if(caseSlaHistoryMap.containsKey(caseRec.Id)) {
+                        // Assign to last owner of open stage
+                        for (ASF_Case_SLA_History__c history : caseSlaHistoryMap.get(caseRec.Id)) {
+                            if (history.Stage__c == ABSLAMC_Constants.OPEN_STAGE) {
+                                caseRec.OwnerId = history.Current_Owner_Id__c;
+                                break;
+                            }
+                        }
+                    }
+                }
+            }
+
+            if(!caseIdToSkipperFlag.isEmpty()){
+                ASF_CaseTriggerModularHelper.setManualSkipperFlags(caseIdToSkipperFlag);
             }
         }
         
