Error Message Changes

--- a/force-app/main/default/classes/ABHI_DeviceDetailsController.cls
+++ b/force-app/main/default/classes/ABHI_DeviceDetailsController.cls
@@ -20,16 +20,28 @@ public with sharing class ABHI_DeviceDetailsController {
         try {
             String integrationName = 'ABHI_DeviceDetails';
             ABCL_IntegrationCallout.accountId = customerId;
-            Account acc = [SELECT id, name, Client_Code__c from Account where Id =: customerId];
-            String detailPayload =  JSON.serialize(new DeviceDetailsRequest(acc.Client_Code__c , '', ''));
-            ABCL_IntegrationCallout.IntegrationResponseWrapper integrationResponse = ABCL_IntegrationCallout.executeCallout(integrationName,detailPayload,null);
-            deserilaizedResponse deserializedIntResponse = (deserilaizedResponse) JSON.deserialize(ABHI_Encryption.decrypt(integrationResponse.responseBody, integrationName), deserilaizedResponse.class);
-            if(integrationResponse.StatusCode == 200){
-                ResponseWrapper returnResponse = new ResponseWrapper(integrationResponse.StatusCode, deserializedIntResponse.Message, deserializedIntResponse.data.devices);
-                return returnResponse;
+            ABCL_IntegrationCallout.IntegrationResponseWrapper integrationResponse = ABCL_IntegrationCallout.executeCallout(integrationName,requestPayload,null);
+            if(integrationResponse.responseBody != ''){
+                EncryptedResponseWrapper encryptedResponse = (EncryptedResponseWrapper) JSON.deserialize(integrationResponse.responseBody, EncryptedResponseWrapper.class);
+                if(encryptedResponse.Content == null || encryptedResponse.Content == ''){
+                    String returnMessage = encryptedResponse.Message != null ? encryptedResponse.Message : Custom_Messages__mdt.getInstance('ABHI_DeviceDetailsNotFound').Message__c;
+                    return new ResponseWrapper(Integer.valueOf(integrationResponse.StatusCode), returnMessage);
+                }
+                String decryptedResponse = ABHI_Encryption.decrypt(encryptedResponse.Content, integrationName);
+                if(integrationResponse.StatusCode == 200 && encryptedResponse.StatusCode == '1000'){
+                    String responseDecryptedBody = (String) JSON.deserializeUntyped(decryptedResponse);
+                    deserilaizedResponse deserializedIntResponse = (deserilaizedResponse) JSON.deserialize(responseDecryptedBody, deserilaizedResponse.class);
+                    ResponseWrapper returnResponse = new ResponseWrapper(Integer.valueOf(encryptedResponse.StatusCode), encryptedResponse.Message, deserializedIntResponse.data.devices);
+                    return returnResponse;
+                }
+                else{
+                    String returnMessage = decryptedResponse != '' ? (String) JSON.deserializeUntyped(decryptedResponse) : encryptedResponse.Message;
+                    ResponseWrapper returnResponse = new ResponseWrapper(Integer.valueOf(encryptedResponse.StatusCode), returnMessage);
+                    return returnResponse;
+                }
             }
             else{
-                ResponseWrapper returnResponse = new ResponseWrapper(integrationResponse.StatusCode, Custom_Messages__mdt.getInstance('ABHI_DeviceDetailsNotFound').Message__c);
+                ResponseWrapper returnResponse = new ResponseWrapper(Integer.valueOf(integrationResponse.StatusCode), Custom_Messages__mdt.getInstance('ABHI_DeviceDetailsNotFound').Message__c);
                 return returnResponse;
             }
         } catch (Exception e) {
